--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,5 +1,5 @@
-{% if name %}
-<h1>Hello {{name}}</h1>
-{% else %}
-<h1>Hello Without Name</h1>
-{% endif     %}
+<html>
+    <body>
+        <h1>Hello {{name}}</h1>
+    </body>
+</html>
